# DecentWasmCounter

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yaml
docs/: README.md
docs/figures/: block_generation_1.drawio  block_generation_2.drawio  block_generation_3.drawio  code_block_example.drawio  workflow.drawio
include/DecentWasmCounter/: DecentWasmCounter.hpp  Exceptions.hpp
src/: Block.hpp  BlockGenerator.hpp  CMakeLists.txt  Classification.hpp  CodeInjector.hpp  DecentWasmCounter.cpp  WeightCalculator.hpp  make_unique.hpp
test/: CMakeLists.txt  Common.hpp  TestInstrumentation.cpp  main.cpp
test/test_wats/: test-01.in.wat  test-01.out.nopt.wat  test-02.in.wat  test-02.out.nopt.wat  test-03.in.wat  test-03.out.nopt.wat
